--- a/myself.css
+++ b/myself.css
@@ -4,5 +4,14 @@ h1{
 }
 p{
     color: rgb(15, 78, 150);
-    font-size: 16px;
+    font-size: 16px;}
+    
+    .firstParagraph{
+        color:orange;
+    }
+     .secondParagraph{
+    color: blueviolet;
+}
+.    Heading{
+    text-decoration: underline;
 }
