--- a/myself.css
+++ b/myself.css
@@ -4,4 +4,65 @@ h1{
 }
 p{
     color: rgb(15, 78, 150);
-}
+
+    img {
+        width: 300px;
+        height: 300px;
+    
+    }
+    *{
+        margin: 0;
+        padding: 0;
+    }
+    body{
+        background-color: rgb(129, 182, 243);
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+    }
+    nav{
+        margin-top: 10px;
+        background-color: rgb(65, 65, 134);
+    }
+    
+    header{
+    background-color: black;
+    color: aliceblue;
+    text-align: center;
+    padding: 20px;
+    
+    
+    }
+    nav ul {
+        list-style: none;
+        text-align: center;
+    }
+    
+    nav ul li {
+    display: inline;
+    margin: 10px;
+    
+    }
+    nav > ul > li > a {
+        text-decoration: none;
+        color:white;
+        font-weight: 20px;
+        margin: 19px;
+        font-size: 20px;
+    }
+    
+    section{
+        background-color: rgb(251, 252, 253);
+        margin: 20px;
+        padding: 20px;
+    }
+    
+    .project{
+        margin: 10px;
+        padding: 10px;
+        border: 1px solid;
+        border-radius:5px;
+    }
+    .projects {
+    display: flex;
+    
+    }
